--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.0.2",
+    "react-router-dom": "^7.0.2"
   },
   "browserslist": [
     "last 2 chrome version"
