--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.0.2",
-    "react-router-dom": "^7.0.2"
+    "react-redux": "^9.2.0",
+    "react-router": "^7.1.1",
+    "react-router-dom": "^7.1.1"
   },
   "browserslist": [
     "last 2 chrome version"
